Clean up some IDE warnings